--- a/auth-server/static-site-test/test-auth-server.html
+++ b/auth-server/static-site-test/test-auth-server.html
@@ -28,6 +28,7 @@
     <p id="result"></p>
     <a id="authURL" href target="_blank">Click to authorize</a>
 
+    <!-- STEP 2 -- Make sure STEP 1 works adding this -->
     <h4>Step 2: Get your code and exchange for an access token</h4>
     <p>
       After you're redirected back to your Meet app, copy the code from the URI.
@@ -38,7 +39,14 @@
     </label>
     <button id="getToken">Get Token</button>
     <p id="accessToken"></p>
+
+    <!-- STEP 3 -- Make sure STEP 2 works before adding this -->
+    <h4>Step 3: Get the calendar events using your access token</h4>
+    <button id="getEvents">Get Events</button>
+    <p id="" events></p>
+
   </main>
+  <!--  ----- STEP 1 -----  -->
   <script type="text/javascript">
     const getAuthUrlButton = document.getElementById("getAuthUrlButton");
     const resultElement = document.getElementById("result");
@@ -60,6 +68,9 @@
           resultLink.href = authUrl;
         });
     };
+    // ----- End of STEP 1 -----
+
+    // ----- STEP 2 -----
     const codeValue = document.getElementById("code");
     const getAccessToken = document.getElementById("getToken");
     const accessTokenElement = document.getElementById("accessToken");
@@ -81,6 +92,26 @@
           accessTokenElement.innerText = JSON.stringify(json);
         });
     };
+    // ----- End of STEP 2 -----
+
+    // ----- STEP 3 -----
+    const getEvents = document.getElementById("getEvents");
+    const events = document.getElementById("events");
+    const getCalendarEvents = "https://8c6ovs67c2.execute-api.us-west-1.amazonaws.com/dev/api/get-events";
+
+    getEvents.onclick = function () {
+      const { access_token } = JSON.parse(accessTokenElement.innerText);
+      const eventRequest = getCalendarEvents + "/" + access_token;
+      fetch(eventsRequest)
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (json) {
+          events.innerText = JSON.stringify(json, null, 2);
+        });
+    };
+    // ----- End of STEP 3 -----
+
   </script>
 </body>
 
