Correct typos in test-auth-server.html

--- a/auth-server/static-site-test/test-auth-server.html
+++ b/auth-server/static-site-test/test-auth-server.html
@@ -43,7 +43,7 @@
     <!-- STEP 3 -- Make sure STEP 2 works before adding this -->
     <h4>Step 3: Get the calendar events using your access token</h4>
     <button id="getEvents">Get Events</button>
-    <p id="" events></p>
+    <p id="events"></p>
 
   </main>
   <!--  ----- STEP 1 -----  -->
@@ -101,7 +101,7 @@
 
     getEvents.onclick = function () {
       const { access_token } = JSON.parse(accessTokenElement.innerText);
-      const eventRequest = getCalendarEvents + "/" + access_token;
+      const eventsRequest = getCalendarEvents + "/" + access_token;
       fetch(eventsRequest)
         .then(function (response) {
           return response.json();
